--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "path": "^0.12.7",
+    "react-hot-loader": "^1.3.1",
     "style-loader": "^0.16.1",
     "webpack-chunk-hash": "^0.4.0",
     "webpack-merge": "^4.1.0"
