--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build-backup": "webpack",
+    "build": "webpack --config ./webpack.config.prod.js",
+    "dev": "webpack --config ./webpack.config.js"
   },
   "keywords": [],
   "author": "",
