--- a/package.json
+++ b/package.json
@@ -13,28 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "chunk-manifest-webpack-plugin": "^1.1.0",
-    "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3",
-    "path": "^0.12.7",
-    "react-hot-loader": "^1.3.1",
-    "style-loader": "^0.16.1",
-    "webpack-chunk-hash": "^0.4.0",
-    "webpack-merge": "^4.1.0"
+    "webpack": "^3.8.1"
   },
-  "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "webpack": "^2.5.0",
-    "webpack-dev-server": "^2.4.5"
-  }
+  "dependencies": {}
 }
