--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build-backup": "webpack",
-    "build": "webpack --config ./webpack.config.prod.js",
-    "dev": "webpack --config ./webpack.config.js"
+    "start": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
