--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    
+    "dev": "webpack --config webpack.config.dev.js"
   },
   "keywords": [],
   "author": "",
