--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
     "dev": "webpack --config webpack.config.dev.js",
     "start": "webpack-dev-server --config webpack.config.dev.js --open",
-    "server": "node server.js"
+    "server": "node server.js",
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
