--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "webpack --config webpack.config.dev.js",
     "start": "webpack-dev-server --config webpack.config.dev.js --open",
     "server": "node server.js",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "watch": "webpack --config webpack.config.js --watch"
   },
   "keywords": [],
   "author": "",
