--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --config webpack.config.dev.js",
-    "start": "webpack-dev-server --config webpack.config.dev.js --open",
+    "start": "node dev-server.js",
+    "startb": "webpack-dev-server --config webpack.config.dev.js --open",
     "server": "node server.js",
     "build": "webpack --config webpack.config.js",
     "watch": "webpack --config webpack.config.js --watch"
