--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "webpack-merge": "^4.1.1"
   }
 }
