feature: add react

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack-merge": "^4.1.1"
   }
