--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
-    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "webpack-merge": "^4.1.1"
   },
   "dependencies": {
     "lodash": "^4.17.4",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "uglifyjs-webpack-plugin": "^1.0.1",
-    "webpack-merge": "^4.1.1"
+    "react-dom": "^16.1.0"
   }
 }
