--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "devb": "webpack --config webpack.config.dev.js",
     "start": "node dev-server.js",
-    "dev": "webpack-dev-server --config webpack.config.dev.js --open",
+    "dev": "webpack-dev-server --progress --config webpack.config.dev.js",
     "server": "node server.js",
     "build": "webpack --config webpack.config.js",
     "watch": "webpack --config webpack.config.js --watch"
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
