--- a/.babelrc
+++ b/.babelrc
@@ -5,10 +5,10 @@
       "targets": {
         "browsers": ["last 2 versions", "safari >= 7"]
       }
-    }]
+    }],
     // webpack现在已经支持原生的import语句了, 并且将其运用在tree-shaking特性上
 
-    // "stage-3",
+    "stage-2"
     // 规定JS运用的语言规范层级
     // Stage 2 是 "草案", 4 是 "已完成", 0 is "稻草人(strawman)"。
     // 详情查看 https://tc39.github.io/process-document/
