--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "webpack-dev-server --progress --config webpack.config.dev.js",
     "dev": "webpack-dev-server --progress --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js",
-    "watch": "webpack --config webpack.config.prod.js --watch"
+    "watch": "webpack --config webpack.config.prod.js --watch",
+    "lint": "eslint src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
@@ -21,6 +23,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "eslint": "^4.12.1",
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
